Adds updated changes to the files

--- a/Lab 1 (Intro + Interpreters) Solutions.ipynb
+++ b/Lab 1 (Intro + Interpreters) Solutions.ipynb
@@ -26,7 +26,7 @@
     "You are given the following SIMP program: \n",
     "```\n",
     "VAR n; \n",
-    "n = 5; \n",
+    "n := 5; \n",
     "WHILE n > 0 DO \n",
     "    BEGIN\n",
     "    PRINT n;\n",
@@ -35,42 +35,106 @@
     "```\n",
     "\n",
     "1. What does its lexical syntax look like on paper? \n",
+    "Just the above as string.\n",
+    "\n",
+    "\n",
     "2. What does its phrasal syntax look like on paper? \n",
+    "\n",
+    "```\n",
+    "   Var\n",
+    "   ID \"n\"\n",
+    "   SEMI\n",
+    "   ID \"n\"\n",
+    "   ASGN \n",
+    "   INT 5\n",
+    "   SEMI \n",
+    "   WHILE\n",
+    "   ID \"n\"\n",
+    "   GT \n",
+    "   INT 0 \n",
+    "   DO \n",
+    "   BEGIN \n",
+    "   PRINT \n",
+    "   ID \"n\"\n",
+    "   SEMI \n",
+    "   ID \"n\"\n",
+    "   ASGN \n",
+    "   ID \"n\"\n",
+    "   MINUS\n",
+    "   INT 1\n",
+    "   END\n",
+    "```\n",
+    "                      \n",
+    "\n",
     "3. What does its abstract syntax look like? (Both on paper and in OCaml!)\n",
+    "\n",
+    "E.g. (different ways of abstraction are possible!) \n",
+    "\n",
+    "```\n",
+    "            program \n",
+    "        /     |      \\\n",
+    "declarations  ;     commands \n",
+    "        |              /    \\ \n",
+    "      VAR n         Asgn     While\n",
+    "                   /  |       /   \\\n",
+    "                 \"n\"  5      Gt    program \n",
+    "                            / \\         |\n",
+    "                          \"n\"  0      commands \n",
+    "                                      /     \\\n",
+    "                                    Print   Asgn \n",
+    "                                     |       /   \\\n",
+    "                                    \"n\"     \"n\"   -\n",
+    "                                                 / \\\n",
+    "                                              \"n\"   1\n",
+    "```\n",
+    "\n",
+    "See below for representation in OCaml.                                              \n",
+    "\n",
     "4. What does a corresponding assembler program look like on paper? (You can use ARM instructions or the MIPS instruction set: https://www.dsi.unive.it/~gasparetto/materials/MIPS_Instruction_Set.pdf - in the lecture, we will use the latter.\n",
-    "You can test your program here: https://cpulator.01xz.net/?sys=mipsr5)"
+    "You can test your program here: https://cpulator.01xz.net/?sys=mipsr5b-spim)\n",
+    "\n",
+    "Here's an example program in MIPS: \n",
+    "```\n",
+    ".set noreorder\n",
+    ".data\n",
+    ".text\n",
+    "main:\n",
+    "# Register for variable n\n",
+    "li $16, 5\n",
+    "WLOOP:\n",
+    "li $t9, 0\n",
+    "# Loop condition\n",
+    "ble $16, $t9, WEND\n",
+    "# Printing n by moving 1 into $2 and n into $4, and then using syscall\n",
+    "li $2, 1\n",
+    "move $4, $16\n",
+    "syscall\n",
+    "# n := n - 1\n",
+    "li $t9, 1\n",
+    "sub $16, $16, $t9\n",
+    "j WLOOP\n",
+    "WEND:\n",
+    "# Ending the program\n",
+    "li $2, 10\n",
+    "syscall\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "1b1fc868",
    "metadata": {
     "kernel": "OCaml 4.13"
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Findlib has been successfully loaded. Additional directives:\n",
-      "  #require \"package\";;      to load a package\n",
-      "  #list;;                   to list the available packages\n",
-      "  #camlp4o;;                to load camlp4 (standard syntax)\n",
-      "  #camlp4r;;                to load camlp4 (revised syntax)\n",
-      "  #predicates \"p,q,...\";;   to set these predicates\n",
-      "  Topfind.reset();;         to force that packages will be reloaded\n",
-      "  #thread;;                 to enable threads\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "type op = Plus | Minus | Mult | Div\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -80,7 +144,7 @@
        "type exp = Id of string | Numb of int | Op of exp * op * exp\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -90,7 +154,7 @@
        "type cond = Eq | Neq | Lte | Lt | Gte | Gt\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -100,7 +164,7 @@
        "type condexp = Cop of exp * cond * exp\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -117,17 +181,22 @@
        "and program = Program of string list * cmd list\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "val p : program = Program ([], [])\n"
+       "val p : program =\n",
+       "  Program ([\"n\"],\n",
+       "   [Asgn (\"n\", Numb 5);\n",
+       "    While (Cop (Id \"n\", Gt, Numb 0),\n",
+       "     Begin\n",
+       "      (Program ([], [Print (Id \"n\"); Asgn (\"n\", Op (Id \"n\", Minus, Numb 1))])))])\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +217,7 @@
     "         \n",
     "and program = Program of string list * cmd list\n",
     "\n",
-    "let p : program = (* TODO *)"
+    "let p : program = Program ([\"n\"], [Asgn (\"n\", Numb 5); While (Cop (Id \"n\", Gt, Numb 0), Begin (Program ([], [Print (Id \"n\"); Asgn (\"n\", Op (Id \"n\", Minus, Numb 1))])))])"
    ]
   },
   {
@@ -165,24 +234,41 @@
     "Program 1 in SIMP: \n",
     "```\n",
     "VAR 1var;\n",
-    "1var = 3\n",
+    "1var := 3\n",
     "```\n",
+    "During syntactic analysis. \n",
+    "For lexical analysis, we would get the following list of tokens: \n",
+    "```\n",
+    "VAR \n",
+    "INT 1 \n",
+    "ID \"var\"\n",
+    "SEMI \n",
+    "INT 1 \n",
+    "ID \"var\"\n",
+    "ASGN \n",
+    "INT 3\n",
+    "```\n",
+    "\n",
     "\n",
     "Program 2 in SIMP: \n",
     "```\n",
     "VAR x\n",
     "```\n",
+    "Syntactic anlysis - the grammar requires at least one command.\n",
     "\n",
     "Program 3 in SIMP: \n",
     "```\n",
     "VAR x;\n",
     "x = 2 + 3;\n",
     "```\n",
+    "During syntactic analysis - something is expected after the semicolon.\n",
     "\n",
     "Program 4 in C: \n",
     "```\n",
     "char *cp = 'x';\n",
     "```\n",
+    "Semantic analysis\n",
+    "\n",
     "\n",
     "Program 5 in Java: \n",
     "```\n",
@@ -193,6 +279,7 @@
     "X x = new X;\n",
     "x.decrement();\n",
     "```\n",
+    "Semantic analysis (at compile-time)\n",
     "\n",
     "Program 6 in Python: \n",
     "```\n",
@@ -202,7 +289,8 @@
     "\n",
     "x = X()\n",
     "x.decrement()\n",
-    "```"
+    "```\n",
+    "At runtime, a dynamic error."
    ]
   },
   {
@@ -219,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "3914828a",
    "metadata": {
     "kernel": "OCaml 4.13"
@@ -231,17 +319,17 @@
        "type op = Plus | Minus | Mult | Div\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "type exp = Id of string | Numb of int | Op of exp * op * exp\n"
+       "type exp = Id of string | Numb of int | Op of exp * op * exp | Neg of exp\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -251,7 +339,7 @@
        "type cond = Eq | Neq | Lte | Lt | Gte | Gt\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -261,7 +349,7 @@
        "type condexp = Cop of exp * cond * exp\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -275,10 +363,11 @@
        "  | While of condexp * cmd\n",
        "  | Begin of program\n",
        "  | Print of exp\n",
+       "  | DoWhile of cmd * condexp\n",
        "and program = Program of string list * cmd list\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -333,7 +422,7 @@
        "  end\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -343,7 +432,7 @@
        "val example_env : int Env.t = <abstr>\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -353,7 +442,7 @@
        "- : int = 3\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -363,7 +452,7 @@
        "exception RuntimeError of string\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -373,7 +462,7 @@
        "val eval : exp -> int Env.t -> int = <fun>\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -383,7 +472,7 @@
        "val eval_condexp : condexp -> int Env.t -> int = <fun>\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -395,7 +484,7 @@
        "val eval_commands : cmd list -> int Env.t -> int Env.t = <fun>\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +492,7 @@
    "source": [
     "type op = Plus | Minus | Mult | Div \n",
     "\n",
-    "type exp = Id of string | Numb of int | Op of exp * op * exp \n",
+    "type exp = Id of string | Numb of int | Op of exp * op * exp (* Start 3.1 *)| Neg of exp (* End 3.1 *)\n",
     "\n",
     "type cond = Eq | Neq | Lte | Lt | Gte | Gt \n",
     "type condexp = Cop of exp * cond * exp\n",
@@ -413,6 +502,8 @@
     "         | While of condexp * cmd\n",
     "         | Begin of program \n",
     "         | Print of exp \n",
+    "         (* Exercise 3.2 *)\n",
+    "         | DoWhile of cmd * condexp\n",
     "         \n",
     "and program = Program of string list * cmd list\n",
     "\n",
@@ -439,6 +530,8 @@
     "    | Op (e1, Div, e2) ->  (match (eval e2 env) with \n",
     "                          | 0 -> raise (RuntimeError \"Divison by 0\")\n",
     "                          | _ -> eval e1 env / eval e2 env)\n",
+    "  (* 3.1 *)                        \n",
+    "    | Neg e -> - (eval e env)                    \n",
     "                          \n",
     "let eval_condexp (e : condexp) env : int = match e with                          \n",
     "    | Cop (e1, Eq, e2) -> if (eval e1 env = eval e2 env) then 1 else 0\n",
@@ -464,6 +557,13 @@
     "                        | _ -> env)\n",
     "    | Begin p -> let _ = eval_program p env in env\n",
     "    | Print e -> let _ = print_endline (\"OUTPUT:\" ^ string_of_int (eval e env)) in env\n",
+    "(* Exercise 3.2 *)\n",
+    "    | DoWhile (c, e) -> (let env' = eval_cmd c env in \n",
+    "                         match (eval_condexp e (eval_cmd c env)) with \n",
+    "                         | 1 -> eval_cmd (DoWhile (c, e)) env'\n",
+    "                         | _ -> env'\n",
+    "                        )\n",
+    "    \n",
     "    \n",
     "and eval_program p env = match p with \n",
     "    | Program (xs, cmds) -> eval_commands cmds Env.empty\n",
@@ -486,27 +586,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bc2b974b",
    "metadata": {
     "kernel": "OCaml 4.13"
    },
    "outputs": [
     {
-     "ename": "error",
-     "evalue": "compile_error",
-     "output_type": "error",
-     "traceback": [
-      "File \"[5]\", line 3, characters 19-21:\n3 | let e = (* TODO *) ;;\n                       ^^\nError: Syntax error\n"
-     ]
+     "data": {
+      "text/plain": [
+       "val e : exp = Op (Numb 3, Plus, Neg (Numb 5))\n"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "- : int = -2\n"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "(* Write an example expression *)\n",
     "\n",
-    "let e = (* TODO *) ;;\n",
+    "let e = Op (Numb 3, Plus, Neg (Numb 5)) ;;\n",
     "\n",
-    "eval e;;"
+    "eval e Env.empty;;"
    ]
   },
   {
@@ -535,7 +647,7 @@
    "source": [
     "(* Write an example program *)\n",
     "\n",
-    "let p = (* TODO *) ;;\n",
+    "let p = Program ([\"n\"], [Asgn (\"n\", Numb 0); DoWhile (Asgn (\"n\", Op (Id \"n\", Plus, Numb 1), )); Print (Id \"n\")]) ;;\n",
     "\n",
     "eval_program p Env.empty;;"
    ]
@@ -558,12 +670,14 @@
     "   Your data type should contain: \n",
     "   - identifiers which represent strings.\n",
     "   - the empty string.\n",
+    "   - string constants.\n",
     "   - a possibility to concatenate Strings.\n",
     "\n",
     "b.) Define a datatype ``string_stm`` of statements manipulating string variables. \n",
     "    They should contain:\n",
-    "    - assignments \n",
-    "    - the possibility to concatenate statements \n",
+    "   - assignments \n",
+    "   - the possibility to print a string\n",
+    "   - the possibility to use several statements \n",
     "    \n",
     "c.) Define an interpreter for 1.) expressions, and 2.) statements.\n",
     "\n",
@@ -572,15 +686,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "92b5f507",
    "metadata": {
     "kernel": "OCaml 4.13"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type string_exp =\n",
+       "    IdString of string\n",
+       "  | EmptyString\n",
+       "  | ConstantString of string\n",
+       "  | ConcatString of string_exp * string_exp\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "type string_cmd = Asgn of string * string_exp | Print of string_exp\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "type string_program = string_cmd list\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "val p : string_program =\n",
+       "  [Asgn (\"x\", ConstantString \"hello\"); Asgn (\"y\", ConstantString \"world\");\n",
+       "   Asgn (\"z\",\n",
+       "    ConcatString (IdString \"x\", ConcatString (IdString \"y\", EmptyString)));\n",
+       "   Print (IdString \"z\")]\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "val eval_string_exp : string_exp -> string Env.t -> string = <fun>\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "val eval_string_cmd : string_cmd -> string Env.t -> string Env.t = <fun>\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "val eval_string_program : string_cmd list -> string Env.t -> string Env.t =\n",
+       "  <fun>\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OUTPUT:helloworld\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "- : string Env.t = <abstr>\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(* Your code comes here *)\n",
-    "\n"
+    "(* a) Defining a type of string expressions: \n",
+    "- Variables will again use strings. \n",
+    "- The empty string does not need any extra information. \n",
+    "- ConstantString takes a string.\n",
+    "- ConcatString takes as argument two string expressions.\n",
+    "*)\n",
+    "\n",
+    "type string_exp = \n",
+    "| IdString of string \n",
+    "| EmptyString \n",
+    "| ConstantString of string \n",
+    "| ConcatString of string_exp * string_exp\n",
+    "\n",
+    "(* b) Assigments now assign variables to string expressions. \n",
+    "      We print a string expression.\n",
+    "      A program is a list of commands - hence giving us the possibility to execute several statements.\n",
+    "*)\n",
+    "type string_cmd = Asgn of string * string_exp \n",
+    "         | Print of string_exp \n",
+    "\n",
+    "type string_program = string_cmd list\n",
+    "\n",
+    "(* An example program *)\n",
+    "let p : string_program = [Asgn (\"x\", ConstantString \"hello\"); Asgn(\"y\", ConstantString \"world\"); \n",
+    "    Asgn (\"z\", ConcatString (IdString \"x\", ConcatString (IdString \"y\", EmptyString))); Print (IdString \"z\")]\n",
+    "\n",
+    "\n",
+    "(* c) This is very similar to the expression interpreter. \n",
+    "    Note that again we use OCaml operations of string expressions.\n",
+    "\n",
+    "*)\n",
+    "let rec eval_string_exp e env = match e with \n",
+    "        | IdString x -> Env.find x env \n",
+    "        | EmptyString -> \"\"\n",
+    "        | ConstantString s -> s\n",
+    "        | ConcatString (e1, e2) -> eval_string_exp e1 env ^ eval_string_exp e2 env \n",
+    "        \n",
+    "let rec eval_string_cmd c env = match c with \n",
+    "    | Asgn (x, e) -> Env.add x (eval_string_exp e env) env\n",
+    "    | Print e -> let _ = print_endline (\"OUTPUT:\" ^ (eval_string_exp e env)) in env\n",
+    "    \n",
+    "let rec eval_string_program cs env = match cs with \n",
+    "    | [] -> env\n",
+    "    | c :: cs -> let env' = eval_string_cmd c env in \n",
+    "                  eval_string_program cs env';;\n",
+    "                  \n",
+    "(* Evaluating the example program *)                  \n",
+    "eval_string_program p Env.empty     \n",
+    "\n",
+    "\n",
+    "d) (* We don't provide solutions to challenges. \n",
+    "Talk to us in the labs if you want to get a hint on the solution. *)"
    ]
   },
   {
@@ -620,7 +881,9 @@
    "outputs": [],
    "source": [
     "(* Your code comes here *)\n",
-    "\n"
+    "\n",
+    "(* We don't provide solutions to challenges. \n",
+    "Talk to us in the labs if you want to get a hint on the solution. *)"
    ]
   }
  ],
